# tfm

./: .gitignore  CMakeLists.txt  README.md  Untitled 1.ods  interface.py  laod_and_execute_model.c  train_model.py
C-code/: laod_and_execute_model.c
C_code/: laod_and_execute_model.c  predict.c  predict.h
C_code_linux/: CMakeLists.txt  main.c
C_code_vitis/: generate_trees.c  generate_trees.h  laod_and_execute_model.c  predict.c  predict.h  train.c  train.h  trees_managment.c  trees_managment.h
benchmarks/: results_128trees.ods  results_16.ods  results_32.ods  results_64.ods
datasets/: Heart_Attack.csv  Lung_Cancer_processed_dataset.csv  Lung_Cancer_raw.csv  apple_quality.csv  breast_cancer.csv  csv_to_binary.c  dataset_laura.csv  diabetes.csv  fraud.csv  lung_cancer.csv  mushroom_cleaned.csv
datasets/SoA/paper1/: haberman.csv  haberman.names
datasets/SoA/paper5/: Skin_NonSkin_1000.csv  creditcard_2023_1000.csv
datasets/kaggle/: Lung_Cancer_processed_dataset.csv  alzheimers_disease_data.csv  alzheimers_processed_dataset.csv  anemia.csv  anemia_processed_dataset.csv  apple_quality_1000.csv  card_fraud.csv  mushroom_cleaned_1000.csv  my_dataset.csv  xor_problem.csv  xor_problemf.csv
linux_driver/: defines_wh.h  main.c
linux_drivers/: README.md  defines_memoty_mapped.h  memory_mapped.c  reload_resource.sh  use_example.c
linux_drivers/MIG_2_DDR3_DMA/: defines_dma.h  main.c
linux_drivers/burst_drivers/: burst.c  burst.h
linux_drivers/burst_mode/: burst.c  defines_burst.h
linux_drivers/common/: common.c  common.h
linux_drivers/dma/: defines_dma.h  dma.c
linux_drivers/memory_mapped/: memory_mapped.c
linux_drivers/train/: train.c  train.h
openCL/: main.c
python_code/: README.md  features_generator2d.py  generate_right_index.py  get_characteristics.py  train_model.py  train_test_model.py
system_tb/: alzheimer.model_tb  alzheimers_processed_dataset.bin_tb  design_1.tcl  top_tb.vhd
trained_models/: alzheimers.model  alzheimers_1024.model  anemia_1024.model  delete_5bytes.c  diabetes.model  diabetes_1024.model  heart_attack.model  heart_attack_1024.model  heart_attack_512.model  lung_cancer.model  lung_cancer_1024.model  lung_cancer_512.model
vivado/MIG_version/: README.md  design_1.tcl
vivado/MIG_version/MIG_config/: design_1_mig_7series_0_0.xci  mig_b.prj
vivado/MIG_version/constrs_1/new/: normal.xdc
vivado/MIG_version/vhdl/: running_leds.vhd
vivado/alveo/constrs_1/new/: normal.xdc
vivado/bcu_vcu1525/: design.tcl
vivado/dma/: dmadesign_1.tcl
vivado/memory_mapped/: design_1.tcl
vivado/memory_mapped/constrs_1/new/: early.xdc  normal.xdc
vivado/ping_pong_burst/: README.md  design_1.tcl
vivado/ping_pong_burst/constrs_1/new/: early.xdc
vivado/sitinv_XC7K325T/: README.md  design_1.tcl
vivado/sitinv_XC7K325T/vhdl/: running_leds.vhd
